--- a/RSS/app/views/layouts/application.html.erb
+++ b/RSS/app/views/layouts/application.html.erb
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+<%= auto_discovery_link_tag(:rss, feed_url(:format => :atom)) %>
+
   <title>RSS</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
 </head>
 <body>
 
